Link numbers, alignment fixes

--- a/src/sass/custom.scss
+++ b/src/sass/custom.scss
@@ -88,7 +88,7 @@ img {
 .chef-wordmark {
   width: auto;
   margin-right: 1rem;
-  height: 36px;
+  height: 40px;
 
   @include media-breakpoint-down(sm) {
     height: 30px;
